--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
   <h2>HTML Forms</h2>
-<form action="https://formsubmit.co/oonalucky@gmail.com" method="POST">
-  <input type="text"  name="fname" placeholder="Full name" required><br>
+<form action="https://formsubmit.co/jethrorabbi@yahoo.com" method="POST">
+  <input type="text"  name="fname" placeholder="Full  name" required><br>
   <input type="email" name="email" placeholder="Email Address" required> <br>
   <select name="Color"> 
     <option>BLUE </option>
@@ -21,13 +21,13 @@
   <br>
   <textarea name="Message" placeholder="Message" required> </textarea> <br>
    <div>
-  <input type="submit" value="Submit" id="formbuttons" onclick="alert('helloo world')">
-  <input type="hidden" name="_next" value="https://jdelina.github.io/gmail/">
-  <input type="hidden" name="_autoresponse" value="Thank you for messaging us! we receive your message">
+  <input type="submit" value="Submit" id="formbuttons" onclick="alert('You are about to send your form')">
+  <input type="hidden" name="_next" value="https://xeqtioner.github.io/trial/">
+  <input type="hidden" name="_autoresponse" value="Thank you for messaging us! We received your message.">
   </div>
 </form> 
 </div>
 
-<p>If you click the "Submit" button, the form-data will be sent to your email.</p>
+<p>If you click the "Submit" button, the form-data aknowledgement will be sent to your email.</p>
 </body>
 </html>
