--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
   <h2>HTML Forms</h2>
-<form action="https://formsubmit.co/jethrorabbi@yahoo.com" method="POST">
+<form action="https://formsubmit.co/99e40b45bee9d1d7402d1374bc2031e6" method="POST">
   <input type="text"  name="fname" placeholder="Full  name" required><br>
   <input type="email" name="email" placeholder="Email Address" required> <br>
   <select name="Color"> 
